required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- PHP/Mapscript: added layerObj units property (#3249)

- Changed the query map rendering implementation without adding extra layers to the map (#3069)

- SQL Server 2008 plugin is not handling null field values correctly (#2893)

- Hatch symbol not properly saved (#2905)

- Expose symbolObj.inmapfile to the SWIG API, have already been exposed to PHP (#3233)

- Expose getGeomTransform/setGeomTransform to SWIG instead of exposing the private vars for rfc48 (#3214)

- Fixed writeSymbol to support writing 'ANGLE AUTO' (#3214)

- Fixed problems with point queries not working via the CGI (mode=query or mode=nquery) (#3246)

- Support QueryByShape() with point and line geometries (#3248)

- Honour MAXSIZE for WCS responses (#3204)

- Implemented RFC 52 LayerResultsGetShape support for OGR connection type.

- Fixed uninitialized variable with malloc used in osPointCluster() (#3236)

- Oracle driver: remove BLOB columns instead of changing them to null (#3228)

- Fixed ogc sld functions to return proper values (#2165)

- MAP EXTENT truncates GetFeature requests for data outside bounds (#1287)

- Added msStringSplitComplex function (#471)

- Mapserver WFS should send maxfeatures to the spatial database (#2605)

- WFS paging support (#2799)

- Fixed joins do not accept crypted passwords (#2912)

- Fixed HTML legend image samples truncated (#2636)

- WMS GetFeatureInfo should respect the scale like GetMap does (#842)

- Filter encoding: simple filters using propertyislike not applied properly
  #2720, #2840

Version 5.6.0 (2009-12-04):
---------------------------
